Fixed wrong post location

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 </ul>
 
 <% if (admin) { %>
-  <form class="form" method="post" action="/admin/login" autocomplete="off">
+  <form class="form" method="post" action="/admin" autocomplete="off">
     <h2>Nýr viðburður</h2>
     <div class="field">
       <label for="name">Nafn</label>
