--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,14 @@ html {
   box-sizing: border-box;
 }
 
+:root {
+  --fonts: Helvetica, Arial, sans-serif;
+  --color-white: #eee;
+  --color-accent: #aa6;
+  --color-accent-dark: #663;
+  --color-accent-light: #cc8;
+}
+
 *,
 *::before,
 *::after {
@@ -11,6 +19,7 @@ html {
 }
 
 body {
+  display: grid;
   font-family: Helvetica, Arial, sans-serif;
   font-size: 16px;
   margin: 0 auto;
@@ -19,11 +28,73 @@ body {
 }
 
 h1,
-h2,
+h2 {
+  margin-bottom: 0.5rem;
+}
+
+h1 {
+  font-size: 2rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+}
+
 h3 {
-  margin-bottom: 1rem;
+  font-size: 1rem;
 }
 
 section {
+  display: grid;
   margin-bottom: 1rem;
+  row-gap: 1rem;
+  width: 100%;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1rem;
+}
+
+form {
+  grid-template-columns: 1fr;
+  row-gap: 1rem;
+}
+
+textarea {
+  max-width: 100%;
+  min-height: 75px;
+  min-width: 100%;
+}
+
+li {
+  margin-bottom: 0.5rem;
+}
+
+.bottom {
+  border-top: 1px solid #000;
+  padding-top: 1rem;
+}
+
+button {
+  background-color: var(--color-accent);
+  border: 0;
+  border-radius: 5px;
+  color: #000;
+  font-size: 1rem;
+  grid-column: span 6;
+  padding: 0.5rem;
+  width: 50%;
+}
+
+input,
+textarea {
+  border: 1px solid var(--color-accent);
+  border-radius: 5px;
+  padding: 0.25rem;
+}
+
+a {
+  color: var(--color-accent-dark);
 }
