--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,11 @@
 <%- include('header') -%>
 
-<h1>Error</h1>
+<section>
+  <h1><%= title %></h1>
+</section>
+
+<section class="bottom">
+  <a href="/">Til baka</a>
+</section>
 
 <%- include('footer') -%>
