--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,10 @@
 <%- include('header') -%>
 
-<h1>Innskráning</h1>
+<section>
+  <h1>Innskráning</h1>
+</section>
 
+<section>
 <form class="form" method="post" action="/admin/login" autocomplete="off">
   <div class="field">
     <label for="username">Notendanafn</label>
@@ -20,7 +23,10 @@
 
   <button class="button">Innskrá</button>
 </form>
+</section>
 
+<section class="bottom">
 <a href="/">Til baka</a>
+</section>
 
 <%- include('footer') -%>
